...
                style = MaterialTheme.typography.titleMedium)
        }
        Spacer(Modifier.height(12.dp))
        Text(stringResource(R.string.title_description), style = MaterialTheme.typography.bodyLarge,
            textAlign = TextAlign.Center)
        Spacer(Modifier.height(48.dp))
        Button(onClick = onPlay, modifier = Modifier.fillMaxWidth().testTag("play_button"),
            shape = RoundedCornerShape(20.dp)) {
            Text(stringResource(R.string.play_two_players), Modifier.padding(vertical = 10.dp),
                style = MaterialTheme.typography.titleMedium, textAlign = TextAlign.Center)
        }
        Spacer(Modifier.height(16.dp))
        Text(stringResource(R.string.offline_label), style = MaterialTheme.typography.bodyMedium,
...
